--- a/app/views/pixels/index.html.erb
+++ b/app/views/pixels/index.html.erb
@@ -2,5 +2,65 @@
 <p>Find me in app/views/pixels/index.html.erb</p>
 <% base_creator_btn.each do |btn|%>
   <%= btn %>
-  
 <% end %>
+
+<table id="example" class="table table-striped table-bordered" style="width: 1000px;">
+    <thead>
+        <tr>
+            <th>id</th>
+            <th>name</th>
+            <th>R Gene</th>
+            <th>B Gene</th>
+            <th>G gene</th>
+            <th>parentA</th>
+            <th>parentB</th>
+        </tr>
+    </thead>
+    
+</table>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+   const table = $('#example').DataTable(
+        {
+            "processing": true,
+             "order": [[ 0, "desc" ]],
+            "ajax": {
+                "url": "/pixels/index.json",
+                "dataSrc": ""
+            },
+            "columns": [
+            { "data": "id" },
+            { "data": "name", 
+                "render": function(data, type, row, meta){
+                    if(type === 'display'){
+                        data = `<a href="/pixels/${row.id}">  ${data} </a>`;
+                    }
+                    return data;
+                }
+             },
+            {
+                "data": "R"
+            },
+            {
+                "data": "B"
+            },
+            {
+                "data": "G"
+            },
+            {
+                "data": "parentA.name", defaultContent: "Base Pixel"
+            },
+            {
+                "data": "parentB.name", defaultContent: "Base Pixel"
+            }
+        ]
+
+        }
+    );
+        setInterval( function () {
+            table.ajax.reload();
+        }, 69000 );
+  });
+
+</script>
