--- a/app/views/pixels/index.html.erb
+++ b/app/views/pixels/index.html.erb
@@ -3,21 +3,22 @@
 <% base_creator_btn.each do |btn|%>
   <%= btn %>
 <% end %>
-
-<table id="example" class="table table-striped table-bordered" style="width: 1000px;">
-    <thead>
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>R Gene</th>
-            <th>B Gene</th>
-            <th>G gene</th>
-            <th>parentA</th>
-            <th>parentB</th>
-        </tr>
-    </thead>
-    
-</table>
+<% unless Pixel.first.nil? %>
+    <table id="example" class="table table-striped table-bordered" style="width: 1000px;">
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>name</th>
+                <th>R Gene</th>
+                <th>B Gene</th>
+                <th>G gene</th>
+                <th>parentA</th>
+                <th>parentB</th>
+            </tr>
+        </thead>
+        
+    </table>
+<% end %>
 
 <script type="text/javascript">
   $(document).ready(function() {
