--- a/app/views/pixels/index.html.erb
+++ b/app/views/pixels/index.html.erb
@@ -4,6 +4,9 @@
   <%= btn %>
 <% end %>
 <% unless Pixel.first.nil? %>
+    <button class="btn btn-success btn-sm" onClick="cronStateUpdater('enabled')">
+        Start Job
+    </button>
     <table id="example" class="table table-striped table-bordered" style="width: 1000px;">
         <thead>
             <tr>
@@ -21,20 +24,20 @@
 <% end %>
 
 <script type="text/javascript">
-  $(document).ready(function() {
-   const table = $('#example').DataTable(
+    
+   var table = $('#example').DataTable(
         {
             "processing": true,
-            "serverSide": true,
              "order": [[ 0, "desc" ]],
             "ajax": {
                 "url": "/pixels/index.json",
-                "dataSrc": ""
+                "dataSrc": "data"
             },
             "columns": [
             { "data": "id" },
             { "data": "name", 
                 "render": function(data, type, row, meta){
+                    console.log(row)
                     if(type === 'display'){
                         data = `<a href="/pixels/${row.id}">  ${data} </a>`;
                     }
@@ -60,9 +63,17 @@
 
         }
     );
+    document.addEventListener("turbolinks:before-cache", function() {
+        if (table !== null) {
+        table.destroy();
+        table = null;
+        }
+    });
+  $(document).ready(function() {
         setInterval( function () {
             table.ajax.reload();
-        }, 69000 );
+        }, 660000 );
   });
+
 
 </script>
