Fix some issues

--- a/app/views/pixels/show.html.erb
+++ b/app/views/pixels/show.html.erb
@@ -48,7 +48,7 @@
 
            <div class="text-center ms-2">
           <p class='mb-1 mx-2'>
-          <%= link_to(@parent_b) do %>
+          <%= link_to(@parent_a) do %>
             <%= @parent_a.name %>
              <% end %>
           </p>
